--- a/iati2014/iati2014/iati2014.csproj
+++ b/iati2014/iati2014/iati2014.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_grid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_grid.Designer.cs">
+      <DependentUpon>frm_grid.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Reader.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_grid.resx">
+      <DependentUpon>frm_grid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Reader.resx">
       <DependentUpon>frm_Reader.cs</DependentUpon>
